--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
       --table-border: #444548;
     }
 
-    /* Общие стили */
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
 
     body {
       margin: 0;
@@ -50,8 +47,6 @@
       align-items: center;
       min-height: 100vh;
       transition: background-color 0.4s, color 0.4s;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
     }
 
     header {
@@ -87,10 +82,7 @@
       user-select: none;
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
-    .theme-toggle-btn:hover {
-      background: var(--primary-color);
-      color: var(--button-text);
-    }
+    .theme-toggle-btn:hover { background: var(--primary-color); }
 
     main {
       width: 95%;
@@ -104,7 +96,6 @@
       flex-direction: column;
       gap: 1rem;
       user-select: none;
-      transition: background-color 0.4s;
     }
 
     input[type="file"] {
@@ -115,19 +106,10 @@
       color: var(--text-color);
       font-weight: 600;
       cursor: pointer;
-      transition: background-color 0.3s, border-color 0.3s;
-      user-select: none;
     }
-    input[type="file"]:hover {
-      border-color: var(--primary-color);
-    }
+    input[type="file"]:hover { border-color: var(--primary-color); }
 
-    label {
-      font-weight: 600;
-      color: var(--secondary-color);
-      margin-right: 6px;
-      user-select: none;
-    }
+    label { font-weight: 600; color: var(--secondary-color); margin-right: 6px; }
 
     input[type="date"], select {
       padding: 8px 14px;
@@ -136,13 +118,9 @@
       background: var(--input-bg);
       color: var(--text-color);
       font-weight: 600;
-      cursor: pointer;
-      transition: border-color 0.3s;
       max-width: 180px;
     }
-    input[type="date"]:hover, select:hover {
-      border-color: var(--primary-color);
-    }
+    input[type="date"]:hover, select:hover { border-color: var(--primary-color); }
 
     button {
       background: var(--button-bg);
@@ -152,14 +130,11 @@
       font-weight: 700;
       padding: 10px 20px;
       cursor: pointer;
-      transition: background-color 0.3s;
       max-width: 200px;
       user-select: none;
       box-shadow: 0 2px 8px rgba(0,0,0,0.15);
     }
-    button:hover {
-      background: var(--primary-color);
-    }
+    button:hover { background: var(--primary-color); }
 
     #output {
       white-space: pre-line;
@@ -172,34 +147,6 @@
       font-size: 1rem;
       color: var(--text-color);
       overflow-x: auto;
-      transition: background-color 0.4s, color 0.4s;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      background: var(--table-bg);
-      border-radius: 8px;
-      overflow: hidden;
-      box-shadow: 0 0 12px var(--primary-color);
-      transition: background-color 0.4s;
-    }
-    th, td {
-      padding: 12px 10px;
-      text-align: center;
-      font-weight: 600;
-      color: var(--text-color);
-      border-bottom: 1px solid var(--table-border);
-      user-select: none;
-    }
-    th {
-      background: var(--table-header-bg);
-      color: var(--primary-color);
-      text-transform: uppercase;
-      font-size: 0.85rem;
-    }
-    tbody tr:last-child td {
-      border-bottom: none;
     }
 
     #totalProfitDisplay {
@@ -208,7 +155,6 @@
       text-align: center;
       margin-top: 0.8rem;
       color: var(--primary-color);
-      user-select: none;
     }
 
     #periodSummary {
@@ -216,7 +162,6 @@
       font-weight: 600;
       white-space: pre-line;
       color: var(--text-color);
-      user-select: none;
     }
 
     .controls {
@@ -227,18 +172,9 @@
       margin-top: 12px;
     }
 
-    /* Responsive */
     @media (max-width: 480px) {
-      header h2 {
-        font-size: 1.4rem;
-        text-align: center;
-      }
-      main {
-        padding: 18px 20px;
-      }
-      table, th, td {
-        font-size: 0.85rem;
-      }
+      header h2 { font-size: 1.4rem; text-align: center; }
+      main { padding: 18px 20px; }
       input[type="file"], select, input[type="date"], button {
         max-width: 100%;
         font-size: 0.9rem;
@@ -249,18 +185,18 @@
 <body>
   <header>
     <h2>P2P Profit Binance</h2>
-    <button class="theme-toggle-btn" aria-label="Переключить тему">🌙 Тёмная тема</button>
+    <button class="theme-toggle-btn">🌙 Тёмная тема</button>
   </header>
 
   <main>
-    <input type="file" id="fileInput" accept=".csv" aria-label="Загрузить CSV файл" />
+    <input type="file" id="fileInput" accept=".csv" />
     
     <div class="controls">
       <label for="dateFromInput">С:</label>
-      <input type="date" id="dateFromInput" aria-label="Дата с" />
+      <input type="date" id="dateFromInput" />
 
       <label for="dateToInput">По:</label>
-      <input type="date" id="dateToInput" aria-label="Дата по" />
+      <input type="date" id="dateToInput" />
 
       <button id="resetBtn">Сбросить статистику</button>
     </div>
@@ -268,15 +204,6 @@
     <pre id="output">Загрузите CSV-файл для анализа.</pre>
 
     <div id="totalProfitDisplay">Общая прибыль: 0 грн</div>
-
-    <div style="margin-top: 20px; overflow-x:auto;">
-      <table id="dailyTable" aria-label="Статистика по дням">
-        <thead>
-          <tr><th>Дата</th><th>Прибыль (грн)</th></tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </div>
 
     <pre id="periodSummary">Выберите период для просмотра статистики.</pre>
   </main>
@@ -288,14 +215,13 @@
     const dateFromInput = document.getElementById('dateFromInput');
     const dateToInput = document.getElementById('dateToInput');
     const output = document.getElementById('output');
-    const dailyTableBody = document.querySelector('#dailyTable tbody');
     const periodSummary = document.getElementById('periodSummary');
     const totalProfitDisplay = document.getElementById('totalProfitDisplay');
     const resetBtn = document.getElementById('resetBtn');
 
-    let dailyProfit = {};
+    let trades = [];
 
-    // Инициализация темы из localStorage или по умолчанию светлая
+    // Тема
     function initTheme() {
       const savedTheme = localStorage.getItem('theme');
       if (savedTheme === 'dark') {
@@ -319,7 +245,7 @@
       }
     });
 
-    // Загрузка и обработка CSV файла
+    // Загрузка файла
     fileInput.addEventListener('change', handleFile);
 
     function handleFile(e) {
@@ -330,66 +256,52 @@
       reader.onload = (event) => {
         const text = event.target.result;
         processCSV(text);
-        // Скрываем input после успешной загрузки файла
         fileInput.style.display = 'none';
       };
       reader.readAsText(file);
     }
 
-    // Парсим CSV, считаем статистику по дням
+    // Парсинг CSV
     function processCSV(csvText) {
-      const rows = csvText.trim().split(/\r?\n/).map(row => row.split(','));
+      const rows = csvText.trim().split(/\r?\n/).map(r => r.split(','));
       const header = rows[0].map(h => h.trim());
       const data = rows.slice(1).filter(r => r.length === header.length);
 
-      // Индексы нужных колонок
       const orderTypeIdx = header.indexOf('Order Type');
       const priceIdx = header.indexOf('Price');
       const quantityIdx = header.indexOf('Quantity');
       let dateIdx = header.indexOf('Match time(UTC)');
       if (dateIdx === -1) dateIdx = header.indexOf('Created Time');
       const statusIdx = header.indexOf('Status');
+      const feeIdx = header.indexOf('Maker Fee');
 
-      if ([orderTypeIdx, priceIdx, quantityIdx, dateIdx, statusIdx].some(i => i === -1)) {
+      if ([orderTypeIdx, priceIdx, quantityIdx, dateIdx, statusIdx, feeIdx].some(i => i === -1)) {
         output.textContent = 'Ошибка: не найдены необходимые колонки в CSV.';
         return;
       }
 
-      dailyProfit = {}; // очищаем предыдущие данные
+      trades = [];
 
       for (const row of data) {
         if (row[statusIdx].trim() !== 'Completed') continue;
-
-        const type = row[orderTypeIdx].trim();
-        const price = parseFloat(row[priceIdx]);
-        const qty = parseFloat(row[quantityIdx]);
-        let dateStr = row[dateIdx].trim();
-
-        if (dateStr.length > 10) dateStr = dateStr.substring(0, 10);
-
-        if (!dailyProfit[dateStr]) {
-          dailyProfit[dateStr] = { buyUah: 0, buyQty: 0, sellUah: 0, sellQty: 0 };
-        }
-
-        if (type === 'Buy') {
-          dailyProfit[dateStr].buyQty += qty;
-          dailyProfit[dateStr].buyUah += qty * price;
-        } else if (type === 'Sell') {
-          dailyProfit[dateStr].sellQty += qty;
-          dailyProfit[dateStr].sellUah += qty * price;
-        }
+        trades.push({
+          type: row[orderTypeIdx].trim(),
+          price: parseFloat(row[priceIdx]),
+          qty: parseFloat(row[quantityIdx]),
+          date: row[dateIdx].trim().substring(0, 10),
+          fee: parseFloat(row[feeIdx] || 0) // комиссия в $
+        });
       }
 
-      // Сохраняем в localStorage
-      localStorage.setItem('dailyProfit', JSON.stringify(dailyProfit));
+      localStorage.setItem('trades', JSON.stringify(trades));
       output.textContent = 'Файл успешно обработан.';
       initDatesFromData();
       updateFilteredView();
     }
 
-    // Устанавливаем даты выбора на первый и последний день из данных
+    // Устанавливаем границы дат
     function initDatesFromData() {
-      const dates = Object.keys(dailyProfit).sort();
+      const dates = trades.map(t => t.date).sort();
       if (dates.length > 0) {
         dateFromInput.value = dates[0];
         dateToInput.value = dates[dates.length - 1];
@@ -399,89 +311,80 @@
       }
     }
 
-    // Обновляем таблицу и статистику по выбранному периоду
+    // Подсчёт прибыли с учётом комиссии
     function updateFilteredView() {
-      dailyTableBody.innerHTML = '';
       periodSummary.textContent = 'Загрузка...';
 
       const from = dateFromInput.value || '0000-00-00';
       const to = dateToInput.value || '9999-99-99';
 
-      const filteredDates = Object.keys(dailyProfit)
-        .filter(d => d >= from && d <= to)
-        .sort();
+      const filtered = trades.filter(t => t.date >= from && t.date <= to);
 
-      let totalBuyUah = 0, totalBuyQty = 0, totalSellUah = 0, totalSellQty = 0;
-      let totalProfit = 0;
+      let buyQty = 0, buyUah = 0;
+      let sellQty = 0, sellUah = 0;
+      let totalFeeUSD = 0;
 
-      filteredDates.forEach(date => {
-        const day = dailyProfit[date];
-        const avgBuyRate = day.buyQty ? day.buyUah / day.buyQty : 0;
-        const avgSellRate = day.sellQty ? day.sellUah / day.sellQty : 0;
-        const circleQty = Math.min(day.buyQty, day.sellQty);
-        const profit = circleQty * (avgSellRate - avgBuyRate);
+      filtered.forEach(t => {
+        if (t.type === 'Buy') {
+          buyQty += t.qty;
+          buyUah += t.qty * t.price;
+        } else if (t.type === 'Sell') {
+          sellQty += t.qty;
+          sellUah += t.qty * t.price;
+        }
 
-        totalBuyUah += day.buyUah;
-        totalBuyQty += day.buyQty;
-        totalSellUah += day.sellUah;
-        totalSellQty += day.sellQty;
-        totalProfit += profit;
-
-        const tr = document.createElement('tr');
-        const tdDate = document.createElement('td');
-        tdDate.textContent = date;
-        const tdProfit = document.createElement('td');
-        tdProfit.textContent = profit.toFixed(2);
-        tr.appendChild(tdDate);
-        tr.appendChild(tdProfit);
-        dailyTableBody.appendChild(tr);
+        if (t.fee) totalFeeUSD += parseFloat(t.fee);
       });
 
-      const avgBuyRateTotal = totalBuyQty ? totalBuyUah / totalBuyQty : 0;
-      const avgSellRateTotal = totalSellQty ? totalSellUah / totalSellQty : 0;
-      const circleTotal = Math.min(totalBuyQty, totalSellQty);
+      const avgBuy = buyQty ? buyUah / buyQty : 0;
+      const avgSell = sellQty ? sellUah / sellQty : 0;
+      const circle = Math.min(buyQty, sellQty);
+      const grossProfit = circle * (avgSell - avgBuy);
 
-      const periodText = 
-        `Куплено USDT: ${totalBuyQty.toFixed(2)}\n` +
-        `Продано USDT: ${totalSellQty.toFixed(2)}\n` +
-        `Средний курс покупки: ${avgBuyRateTotal.toFixed(2)} грн\n` +
-        `Средний курс продажи: ${avgSellRateTotal.toFixed(2)} грн\n` +
-        `Объём для полного круга: ${circleTotal.toFixed(2)} USDT\n` +
-        `Прибыль за период: ${totalProfit.toFixed(2)} грн`;
+      // Средний курс для перевода комиссии в грн
+      const avgRate = (avgBuy + avgSell) / 2;
+      const feeUah = totalFeeUSD * avgRate;
+
+      const netProfit = grossProfit - feeUah;
+
+      const periodText =
+        `Куплено USDT: ${buyQty.toFixed(2)}\n` +
+        `Продано USDT: ${sellQty.toFixed(2)}\n` +
+        `Средний курс покупки: ${avgBuy.toFixed(2)} грн\n` +
+        `Средний курс продажи: ${avgSell.toFixed(2)} грн\n` +
+        `Объём для полного круга: ${circle.toFixed(2)} USDT\n` +
+        `Комиссия: ${feeUah.toFixed(2)} грн\n` +
+        `Прибыль за период: ${netProfit.toFixed(2)} грн`;
 
       periodSummary.textContent = periodText;
-      totalProfitDisplay.textContent = `Общая прибыль: ${totalProfit.toFixed(2)} грн`;
+      totalProfitDisplay.textContent = `Общая прибыль: ${netProfit.toFixed(2)} грн`;
 
       output.textContent = `Обработка завершена. Выбран период с ${from} по ${to}.`;
     }
 
-    // Сброс статистики
+    // Сброс
     resetBtn.addEventListener('click', () => {
       if (confirm('Вы уверены, что хотите сбросить всю статистику?')) {
-        dailyProfit = {};
-        localStorage.removeItem('dailyProfit');
-        dailyTableBody.innerHTML = '';
+        trades = [];
+        localStorage.removeItem('trades');
         periodSummary.textContent = 'Выберите период для просмотра статистики.';
         totalProfitDisplay.textContent = 'Общая прибыль: 0 грн';
         output.textContent = 'Статистика сброшена. Загрузите CSV-файл для анализа.';
         dateFromInput.value = '';
         dateToInput.value = '';
         fileInput.value = '';
-        fileInput.style.display = 'block'; // Показываем input заново
+        fileInput.style.display = 'block';
       }
     });
 
-    // Обновляем данные при изменении дат
     dateFromInput.addEventListener('change', updateFilteredView);
     dateToInput.addEventListener('change', updateFilteredView);
 
-    // При загрузке страницы и если есть сохранённые данные — загружаем их
     window.addEventListener('load', () => {
       initTheme();
-
-      const savedProfit = localStorage.getItem('dailyProfit');
-      if (savedProfit) {
-        dailyProfit = JSON.parse(savedProfit);
+      const saved = localStorage.getItem('trades');
+      if (saved) {
+        trades = JSON.parse(saved);
         fileInput.style.display = 'none';
         initDatesFromData();
         updateFilteredView();
